Fix wrapping issue in custom field list 'fields left' notice

--- a/php/orangehrm/symfony/plugins/orangehrmPimPlugin/web/css/listCustomFieldsSuccess.css
+++ b/php/orangehrm/symfony/plugins/orangehrmPimPlugin/web/css/listCustomFieldsSuccess.css
@@ -41,5 +41,5 @@ div.dialogButtons {
 }
 
 div.actionbuttons {
-    width: 50%;
+    width: auto;
 }
